<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/read"
    tools:context=".depression_read">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/depressiondef"
            android:layout_width="match_parent"
            android:layout_height="301dp"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/depression"
            android:cropToPadding="true"
            android:padding="5dp"
            android:src="@drawable/depressiondef" />

        <TextView
            android:id="@+id/headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/depressiondef"
            android:layout_margin="8dp"
            android:text="@string/what5"
            android:textSize="36sp"
            android:textColor="#F06292"
            android:padding="5dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/definition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/headline"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="10dp"
            android:text="@string/DepressionDef"
            android:textSize="24sp"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/headline_symp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/definition"
            android:layout_margin="8dp"
            android:text="@string/symDep"
            android:textSize="36sp"
            android:textColor="#F06292"
            android:padding="5dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/symp"
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/depressionSymp"
            android:textSize="24sp"
            android:textColor="#000000"
            android:layout_below="@id/headline_symp" />

        <TextView
            android:id="@+id/headline_causes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/symp"
            android:layout_margin="8dp"
            android:text="@string/causesDep"
            android:textSize="36sp"
            android:textColor="#F06292"
            android:padding="5dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/causes"
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/DepressionCauses"
            android:textSize="24sp"
            android:textColor="#000000"
            android:layout_below="@id/headline_causes" />

        <TextView
            android:id="@+id/headline_improvement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/causes"
            android:layout_margin="8dp"
            android:text="@string/improveDep"
            android:textSize="36sp"
            android:textColor="#F06292"
            android:padding="5dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/improvement"
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/depressionImprovement"
            android:textSize="24sp"
            android:textColor="#000000"
            android:layout_below="@id/headline_improvement" />


    </RelativeLayout>



</ScrollView>