<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StressQuiz">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/count"
            android:paddingTop="15dp"
            android:layout_centerHorizontal="true"
            android:textSize="30sp"
            android:textColor="#0288D1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/questions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/count"
            android:fontFamily="casual"
            android:padding="25dp"
            android:text="@string/question"
            android:textAlignment="center"
            android:textColor="#0288D1"
            android:textSize="36sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/opt_button"
            android:backgroundTint="#FFA726"
            android:text="@string/opt1"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:layout_below="@id/questions"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:background="@drawable/opt_button"
            android:backgroundTint="#FFA726"
            android:text="@string/opt2"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:layout_marginBottom="30dp"
            android:layout_below="@id/button"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:background="@drawable/opt_button"
            android:backgroundTint="#FFA726"
            android:text="@string/opt3"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:layout_marginBottom="30dp"
            android:layout_below="@id/button2"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/button4"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:background="@drawable/opt_button"
            android:backgroundTint="#FFA726"
            android:text="@string/opt4"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:layout_marginBottom="130dp"
            android:layout_below="@id/button3"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>
</ScrollView>
