<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StressScore">

    <TextView
        android:id="@+id/score"
        android:layout_width="320dp"
        android:layout_height="100dp"
        android:background="#0288D1"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:text="@string/score"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:textAlignment="center"
        android:paddingTop="27dp"/>

    <View
        android:id="@+id/divider"
        android:layout_width="320dp"
        android:layout_height="1dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/score"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/marks"
        android:layout_width="320dp"
        android:layout_height="150dp"
        android:layout_below="@id/divider"
        android:background="@drawable/bg3"
        android:layout_centerHorizontal="true"
        android:text="@string/marks"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:textAlignment="center"
        android:paddingTop="30dp"/>

    <TextView
        android:id="@+id/result"
        android:layout_width="320dp"
        android:layout_height="150dp"
        android:layout_below="@id/marks"
        android:layout_centerHorizontal="true"
        android:text="@string/result"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#FFA726"
        android:textAlignment="center"
        android:paddingTop="30dp"/>


    <TextView
        android:id="@+id/activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/result"
        android:paddingTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/activities"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/act"
        android:layout_width="149dp"
        android:layout_height="79dp"
        android:layout_below="@+id/activity"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/opt_button"
        android:backgroundTint="#0288D1"
        android:text="@string/activityb"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:textStyle="bold"/>

</RelativeLayout>