<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StressMusic"
    android:padding="10dp"
    android:background="@drawable/mountain"
    android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rel_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/pBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/music"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/stress_relief"
                android:textSize="28sp"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/science_music"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/music"
                android:layout_marginTop="50dp"
                android:layout_marginStart="10dp"
                android:text="@string/stress_science"
                android:textSize="15sp"
                android:textColor="#ffffff"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/music_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/science_music"
                android:layout_marginTop="30dp"
                android:layout_marginStart="10dp"
                android:text="@string/stress_science_text"
                android:textSize="18sp"
                android:textColor="#ffffff"
                />

            <TextView
                android:id="@+id/playlist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/music_text"
                android:layout_marginTop="100dp"
                android:text="@string/playlist"
                android:textSize="24sp"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:textAlignment="center"/>


            <TextView
                android:id="@+id/music1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/playlist"
                android:layout_margin="15dp"
                android:text="@string/music1"
                android:textSize="18sp"
                android:textColor="#ffffff"
                />

            <com.ohoussein.playpause.PlayPauseView
                android:id="@+id/play_pause_view1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:clickable="true"
                android:focusable="true"
                android:layout_below="@id/playlist"
                android:layout_marginStart="280dp"
                android:layout_marginTop="20dp"
                android:foreground="?android:selectableItemBackground"
                app:fill_color="#e1e1e1"
                app:pause_bg="#FFA726"
                app:play_bg="#0288D1" />


            <TextView
                android:id="@+id/music2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/music1"
                android:layout_margin="15dp"
                android:text="@string/music2"
                android:textSize="18sp"
                android:textColor="#ffffff"
                />

            <com.ohoussein.playpause.PlayPauseView
                android:id="@+id/play_pause_view2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:clickable="true"
                android:focusable="true"
                android:layout_below="@id/music1"
                android:layout_marginStart="280dp"
                android:layout_marginTop="20dp"
                android:foreground="?android:selectableItemBackground"
                app:fill_color="#e1e1e1"
                app:pause_bg="#FFA726"
                app:play_bg="#0288D1" />



            <TextView
                android:id="@+id/music3"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/music2"
                android:layout_margin="15dp"
                android:text="@string/music3"
                android:textSize="18sp"
                android:textColor="#ffffff" />


            <com.ohoussein.playpause.PlayPauseView
                android:id="@+id/play_pause_view3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:clickable="true"
                android:focusable="true"
                android:layout_below="@id/music2"
                android:layout_marginStart="280dp"
                android:layout_marginTop="20dp"
                android:foreground="?android:selectableItemBackground"
                app:fill_color="#e1e1e1"
                app:pause_bg="#FFA726"
                app:play_bg="#0288D1" />



            <TextView
                android:id="@+id/music4"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/music3"
                android:layout_margin="15dp"
                android:text="@string/music4"
                android:textSize="18sp"
                android:textColor="#ffffff"
                />


            <com.ohoussein.playpause.PlayPauseView
                android:id="@+id/play_pause_view4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:clickable="true"
                android:focusable="true"
                android:layout_below="@id/music3"
                android:layout_marginStart="280dp"
                android:layout_marginTop="20dp"
                android:foreground="?android:selectableItemBackground"
                app:fill_color="#e1e1e1"
                app:pause_bg="#FFA726"
                app:play_bg="#0288D1" />



            <TextView
                android:id="@+id/music5"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/music4"
                android:layout_margin="15dp"
                android:text="@string/music5"
                android:textSize="18sp"
                android:textColor="#ffffff"
                />

            <com.ohoussein.playpause.PlayPauseView
                android:id="@+id/play_pause_view5"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:clickable="true"
                android:focusable="true"
                android:layout_below="@id/music4"
                android:layout_marginStart="280dp"
                android:layout_marginTop="20dp"
                android:foreground="?android:selectableItemBackground"
                app:fill_color="#e1e1e1"
                app:pause_bg="#FFA726"
                app:play_bg="#0288D1" />

        </RelativeLayout>


    </ScrollView>
