<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/mountain"
    tools:context=".stress_listen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/quizC"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:elevation="32dp"
            app:cardCornerRadius="8dp"
            android:layout_margin="30dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/quiz"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:src="@drawable/quiz3"
                    android:contentDescription="@string/anxiety"
                    android:scaleType="centerCrop"/>

                <TextView
                    android:id="@+id/quixText"
                    android:layout_below="@id/quiz"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:paddingTop="10dp"
                    android:text="@string/quiz"
                    android:textColor="#000000"
                    android:textAlignment="center"
                    android:textSize="27sp"
                    android:textStyle="bold" />


            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/musicC"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            app:cardCornerRadius="8dp"
            android:elevation="32dp"
            android:layout_margin="30dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/music"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:src="@drawable/music3"
                    android:contentDescription="@string/anxiety"
                    android:scaleType="centerCrop"/>

                <TextView
                    android:id="@+id/musicText"
                    android:layout_below="@id/music"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:paddingTop="10dp"
                    android:text="@string/music"
                    android:textColor="#000000"
                    android:textAlignment="center"
                    android:textSize="27sp"
                    android:textStyle="bold" />


            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/exerciseC"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            app:cardCornerRadius="8dp"
            android:elevation="32dp"
            android:layout_margin="30dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/exercise"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:src="@drawable/yoga3"
                    android:contentDescription="@string/anxiety"
                    android:scaleType="centerCrop"/>

                <TextView
                    android:id="@+id/exerciseText"
                    android:layout_below="@id/exercise"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:paddingTop="10dp"
                    android:text="@string/meditation"
                    android:textColor="#000000"
                    android:textAlignment="center"
                    android:textSize="27sp"
                    android:textStyle="bold" />


            </RelativeLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

</ScrollView>